2008-12-01  Benjamin Berg  <benjamin@sipsolutions.net>

	* configure.ac:
	Post release bumb to 2.17.2.

2008-12-01  Benjamin Berg  <benjamin@sipsolutions.net>

	* NEWS:
	2.17.1 release.

2008-11-30  Benjamin Berg  <benjamin@sipsolutions.net>

	* engines/*:
	Use G_DEFINE_DYNAMIC_TYPE everywhere. Bug #549830.

2008-11-30  Benjamin Berg  <benjamin@sipsolutions.net>

	* engines/clearlooks/src/clearlooks_draw.c:
	(clearlooks_draw_radiobutton):
	* engines/clearlooks/src/clearlooks_draw_gummy.c:
	(clearlooks_gummy_draw_radiobutton):
	Fix inconsistent radio button drawing.

2008-11-30  Paolo Borelli  <pborelli@katamail.com>

	* engines/clearlooks/src/clearlooks_style.c
	(clearlooks_style_draw_box):
	Make sure cairo_destroy is called when detail is buttondefault.
	Reviewed by Andrea Cimitan.

2008-11-28  Benjamin Berg  <benjamin@sipsolutions.net>

	* engines/industrial/src/parse_rc_style.h:
	Remove the usage of deprecated glib symbols.
	Bug #560443, patch by Travis Veralrud

2008-11-28  Benjamin Berg  <benjamin@sipsolutions.net>

	* engines/*/Makefile.am:
	Change the oder of the -I flags, so the locale ones are in front of
	the global flags. Bug #560042.

2008-11-03  Benjamin Berg  <benjamin@sipsolutions.net>

	* configure.ac:
	Postrelease bump to 2.17.1.

2008-11-03  Benjamin Berg  <benjamin@sipsolutions.net>

	* NEWS:
	Update new file for 2.17.0.

2008-11-03  Benjamin Berg  <benjamin@sipsolutions.net>

	* engines/clearlooks/src/clearlooks_draw_gummy.c:
	(clearlooks_gummy_draw_button):
	Do not draw default indicator, if the button is disabled.

2008-11-03  Benjamin Berg  <benjamin@sipsolutions.net>

	* themes/Clearlooks/gtk-2.0/gtkrc:
	Fix the bg color of GtkViewport and GtkScrolledWindow in notebooks.

2008-10-18  Benjamin Berg  <benjamin@sipsolutions.net>

	* engines/mist/src/mist-style.c:
	Make mist_style_draw_focus static.

2008-10-11  Andrea Cimitan  <andrea.cimitan@gmail.com>

	* engines/clearlooks/src/clearlooks_style.c
	(clearlooks_style_draw_box):